--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
+}
+
+:root {
+    --bg-color: #6b0014;
+    --second-bg-color: #181818;
+    --text-color: #ffffff;
+    --main-color: #f51735;
+}
+
+
+html {
+    overflow-x: hidden;
+}
+
+body {
+    min-height: 100vh;
+    text-align: center;
+
+
+    color: var(--text-color);
+    background: var(--bg-color);
+    background: linear-gradient(52deg, rgba(107,0,20,1) 0%,
+    rgba(245,23,53,1) 100%);
+
+}
+
+.header{
+    background-color: var(--second-bg-color);
+}
+
+
