--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,10 +16,10 @@
 }
 
 :root {
-    --bg-color: #6b0014;
+    --bg-color: #9e8e22;
     --second-bg-color: #181818;
     --text-color: #ffffff;
-    --main-color: #f51735;
+    --main-color: #fff316;
 }
 
 
@@ -34,8 +34,8 @@ body {
 
     color: var(--text-color);
     background: var(--bg-color);
-    background: linear-gradient(52deg, rgba(107,0,20,1) 0%,
-    rgba(245,23,53,1) 100%);
+    background: linear-gradient(52deg, rgb(158, 142, 34) 0%,
+    rgb(255, 243, 22) 100%);
 
 }
 
@@ -43,9 +43,14 @@ body {
     background-color: var(--second-bg-color);
 }
 
+
 .animacionScaleHover{
+    margin-top: 1rem;
     transition: all 0.5s ease-in-out;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
 .animacionScaleHover:hover{
     transform: scale(1.1);
+    filter: brightness(1.2) saturate(1.3);
 }
+
